--- a/core/css/styles.css
+++ b/core/css/styles.css
@@ -191,6 +191,7 @@ label.infield { cursor:text !important; top:1.05em; left:.85em; }
 #login #databaseField .infield { padding-left:0; }
 #login form input[type="checkbox"]+label { position:relative; margin:0; font-size:1em; text-shadow:#fff 0 1px 0; }
 #login form .errors { background:#fed7d7; border:1px solid #f00; list-style-indent:inside; margin:0 0 2em; padding:1em; }
+#login form .notifications { background: #ffffe0; border:1px solid #FFFF66; list-style-indent:inside; margin:0 0 2em; padding:1em; }
 
 /* Show password toggle */
 #show { position:absolute; right:1em; top:.8em; float:right; }
