--- a/core/css/styles.css
+++ b/core/css/styles.css
@@ -307,6 +307,7 @@ label.infield { cursor:text !important; top:1.05em; left:.85em; }
 }
 #body-login form .errors { background:#fed7d7; border:1px solid #f00; list-style-indent:inside; margin:0 0 2em; padding:1em; }
 #body-login .success { background:#d7fed7; border:1px solid #0f0; width: 35%; margin: 30px auto; padding:1em; text-align: center;}
+#body-login form .notifications { background: #ffffe0; border:1px solid #FFFF66; list-style-indent:inside; margin:0 0 2em; padding:1em; }
 
 #body-login #remember_login:hover+label,
 #body-login #remember_login:focus+label  {
